--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -6,7 +6,7 @@
 <div class="container mt-5 min-vh-100">
     <div class="row h-100">
         <div class="col-lg-10 col-12 py-0 mx-auto">
-            <h4 class="thin">[ Changelog Repositorys ]</h4>
+            <h4 class="thin">[ Changelog Repositories ]</h4>
             {% for repo in repos %}
             <a href="{% url 'changelog' repo.id %}">
                 <div class="repo-card border-bottom p-2">
